# Federated-learning-with-psuedo-labeling

./: .gitignore  .venv  CLAUDE.md  DATA_CARD.md  MODEL_CARD.md  README.md  REPRODUCIBILITY.md  SECURITY.md  SSFL_IMPLEMENTATION_PLAN.md  pyproject.toml
configs/: debug.yaml  deployment.yaml  experiments.yaml  experiments_robustness_seeds.yaml  experiments_smoke.yaml  experiments_solution.yaml  paper.yaml  paper_batch100.yaml  robustness.yaml  smoke.yaml
deployment/: Dockerfile  README.md  docker-compose.yml  generate_launch_configs.py
deployment/certs/: generate_dev_certs.sh
scripts/: run_solution_with_alert.sh
src/ssfl/: client_app.py  comms.py  config.py  device.py  logging_utils.py  metrics.py  models.py  records.py  run_context.py  seeding.py  server_app.py  telemetry.py  training.py
src/ssfl/data/: archive.py  datasets.py  discovery.py  io.py  labels.py  manifest.py  partition.py  prepare_data.py  sampling.py  scaling.py
src/ssfl/experiments/: run_suite.py
src/ssfl/protocols/: dsfl.py  fd.py  fl.py  message.py  payload_limits.py  ssfl.py  state.py
src/ssfl/reporting/: build_report.py
src/ssfl/strategies/: __init__.py  dsfl.py  fd.py  ssfl.py
tests/: conftest.py
tests/deployment/: test_deployment_smoke.py  test_generate_launch_configs.py
tests/integration/: test_simulation_smoke.py
tests/privacy/: test_wire_privacy.py
tests/protocol/: test_dsfl.py  test_fd.py  test_fl.py  test_message.py  test_payload_limits.py  test_ssfl.py  test_state.py
tests/unit/: test_build_report.py  test_config.py  test_data_prepare.py  test_datasets.py  test_foundation.py  test_logging_utils.py  test_models.py  test_resume_ledgers.py  test_run_suite.py  test_strategies_security.py  test_telemetry.py  test_training.py
tmp/pdfs/: build_ssfl_report.py  paper.txt  ssfl_comprehensive_explanation.md  ssfl_rendered_text.txt
