[project]
name = "ssfl"
version = "0.1.0"
description = "Semisupervised Federated Learning (SSFL) paper reproduction on N-BaIoT with Flower + PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "flwr[simulation]>=1.13",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssfl"]

[tool.ruff]
line-length = 100
target-version = "py312"
