[project]
name = "ssfl"
version = "0.1.0"
description = "Semisupervised Federated Learning (SSFL) paper reproduction on N-BaIoT with Flower + PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "flwr[simulation]>=1.13",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.11.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssfl"]

[tool.ruff]
line-length = 100
target-version = "py312"

# Flower app manifest. serverapp/clientapp targets are built in M5 (Flower runtime integration);
# the manifest is declared now so `flwr run .` becomes usable the moment those modules land,
# without a second round of pyproject.toml surgery. Config keys mirror ExperimentConfig field
# names (hyphenated, matching flwr's run-config convention) and default to the paper profile.
[tool.flwr.app]
publisher = "ssfl-reproduction"

[tool.flwr.app.components]
serverapp = "ssfl.server_app:app"
clientapp = "ssfl.client_app:app"

[tool.flwr.app.config]
# `profile` plus a small allowlist of knobs genuinely meant to be picked per invocation
# (algorithm/scenario/device). Every other field comes from configs/<profile>.yaml via
# experiment_config_from_run_config, which layers that YAML underneath context.run_config.
# Flower populates run_config from this ENTIRE table on every run -- including keys never
# passed on the CLI -- so anything added here always clobbers that field in every profile
# YAML unless the CLI also happens to pass a matching value. Do not add profile-defining
# fields (num-server-rounds, local-epochs, batch-size, run-kind, ...) here: express a new
# combination as a new configs/<name>.yaml instead. Flower also refuses to accept a
# --run-config override for any key not already declared in this table.
profile = "paper"
algorithm = "ssfl"
scenario = 1
device = "auto"


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 27
